<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <include layout="@layout/weibo_headerbar" />

    <RelativeLayout
        android:id="@+id/RelativeLayout001"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/mycount"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_count" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/mycount"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_picture" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/picture"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <CheckBox
                            android:id="@+id/pictureOrNot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/list_image"
                            android:layout_marginLeft="39dp"
                            android:layout_toRightOf="@+id/list_text" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/theme"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_theme" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/theme"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/weibo"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/seeting_weibo" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/weibo"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/setting"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_general" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/setting"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/feedback"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_feedback" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/feedback"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/help"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_help" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/help"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >

                    <RelativeLayout
                        android:id="@+id/about"
                        android:layout_width="fill_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/btn_before"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp" >

                        <ImageView
                            android:id="@+id/list_image"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/setting_about" />

                        <TextView
                            android:id="@+id/list_text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/list_image"
                            android:text="@string/about"
                            android:textColor="#666666"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/arrow" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="2dp" >
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <include layout="@layout/weibo_menu" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>